--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE HTML>
+<html lang="en">
+<head>
+    <title>HTML link tag with href</title>
+</head>
+<body> 
+    <a href="https://flatironschool.com">Flatiron School</a>
+</body>
+
+</html>
